service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: webapp
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: webapp
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 80
