ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
      - paths:
        pathType: Prefix
        path: "/app"
        backend:
          service:
            name: frontend
            port:
              number: 80
      - paths:
        pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api
            port:
              number: 80
